--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mary.css">
-    <title>Mary's Birthday</title>
+    <title>Ayomide's Birthday</title>
 </head>
 <body>
     
@@ -16,8 +16,8 @@
            </div>
       </div>
       <div class="text-container">
-        <p id="head">Happy Birthday Tomisin!</p>
-        <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+        <p id="head">Happy Birthday Ayomide 🏩!</p>
+        <p>I hope your special day will bring you lots of happiness🙂 , love💌 , and fun🌕 . You deserve them a lot. Enjoy!</p>
         <p>Hope your day goes great!</p>
       </div>
     </div>
@@ -29,9 +29,9 @@
            </div>
       </div>
       <div class="text-container">
-        <p id="head">Happy Birthday OMOMI!</p>
-        <p>Thanks for another year of being an awesome friend. </p>
-        <p>Enjoy Your Day Omomi!</p>
+        <p id="head">Ayomide! My Wonderful Friend.</p>
+        <p>Certain people touch your heart in a way that you just can’t stop thinking about them; that is the kind of person you are; so far, yet so near, so simple, yet so desirable. </p>
+        <p>I still can't stop thinking about you even on this your special day!</p>
       </div>
     </div>
       <div class="card">
@@ -42,8 +42,8 @@
            </div>
       </div>
       <div class="text-container">
-        <p id="head">Happy Birthday Aburomi!</p>
-        <p>I am grateful for your true friendship.</p>
+        <p id="head">Happy Birthday Dear Friend!</p>
+        <p>I just wish my request be granted on this your special day! I haert💟 you so much Ayomide </p>
         <p>Just Do well to send my cake!</p>
       </div>
     </div>
